...
        android:textSize="24sp"
        android:textColor="@color/dark_brown"
        android:fontFamily="serif"
        android:text="Select the degrees that require this course"/>

    <ListView
        android:id="@+id/to_select_degrees_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"/>


...
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/done_selecting_degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:text="Done"
            android:textAllCaps="false"
...
