<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AddCourseFragment"
    android:background="@color/cosmic_latte">


    <ListView
        android:id="@+id/categories_list_in_add_courses_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />
</FrameLayout>

