...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Instructor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_for_instructor_text_box_in_add_a_section_page"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
...
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/edit_text_with_thick_border"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/Location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_for_location_text_box_in_add_a_section_page"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/section_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_with_thick_border"
                    android:hint="@string/section_time_picker_hint_in_add_a_section_page" />


                <TextView
                    android:id="@+id/Days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_for_days_text_box_in_add_a_section_page"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/SectionID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_for_section_id_text_box_in_add_a_section_page"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
...
                    android:layout_margin="10dp"
                    android:inputType="text"
                    android:background="@drawable/edit_text_with_thick_border"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/CAP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_for_capacity_text_box_in_add_a_section_page"
                    android:layout_weight="0.5"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
...
                    android:paddingBottom="10dp"
                    android:inputType="number"
                    android:background="@drawable/edit_text_with_thick_border"
                    tools:ignore="Autofill" />

                <Button
                    android:id="@+id/AddSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_for_add_a_section_button_in_admin_side"
                    android:onClick="buttonAddSection"
                    android:layout_weight="0.5"
                    android:textAllCaps="false"
...
